# SofaGLFW

.github/workflows/: ci.yml
SofaGLFW/: CMakeLists.txt
SofaGLFW/src/SofaGLFW/: NullGUIEngine.cpp  NullGUIEngine.h  SofaGLFWBaseGUI.cpp  SofaGLFWBaseGUI.h  SofaGLFWGUI.cpp  SofaGLFWGUI.h  SofaGLFWWindow.cpp  SofaGLFWWindow.h  config.h.in  initSofaGLFW.cpp
SofaImGui/: CMakeLists.txt
SofaImGui/src/SofaImGui/: ImGuiDataWidget.cpp  ImGuiGUI.cpp  ImGuiGUI.h  ImGuiGUIEngine.cpp  ImGuiGUIEngine.h  config.h.in  imgui_impl_bgfx.cpp  imgui_impl_bgfx.h  initSofaImGui.cpp
SofaImGui/src/SofaImGui/widgets/: ScalarWidget.h
SofaImGui/src/SofaImGui/windows/: Performances.h  Profiler.h  SceneGraph.cpp  Settings.cpp  Settings.h  ViewPort.cpp  ViewPort.h
exe/: CMakeLists.txt  Main.cpp
lib/: CMakeLists.txt  SofaGLFWConfig.cmake.in
lib/src/SofaGLFW/: initSofaGLFW.cpp
